# keccacheck

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  build.sh  security.md
.github/workflows/: ci.yml  typos.toml
bench/: Cargo.toml
bench-ark/: Cargo.toml
bench-ark/src/: main.rs
bench-keccak/: Cargo.toml
bench-keccak/src/: main.rs  prover.rs  reference.rs  test.rs  verifier.rs
bench-keccak/src/poseidon/: mod.rs
bench-keccak/src/sumcheck/: chi.rs  iota.rs  mod.rs  rho.rs  theta.rs  theta_a.rs  theta_c.rs  theta_d.rs  util.rs
bench-keccak/src/transcript/: mod.rs  sponge.rs
bench-provekit/: Cargo.toml
bench-provekit/src/: main.rs
gkr/: Cargo.toml  README.md
gkr/src/: basic_parallel.rs  basic_sparse.rs  cmp.rs  keccak.rs  keccak_definition.rs  keccak_parallel.rs  keccak_sparse.rs  lib.rs  main.rs
gnark/: Makefile  bindings.h  circuit.go  ffi_test.go  gnark.pprof  go.mod  go.sum  hint.go  keccak_verifier.go  keccak_verifier_test.go  main.go  utils.go
gnark-keccakf/: go.mod  go.sum  main.go
gnark/poseidon2/: poseidon2.go  poseidon_constants.go  poseidon_test.go
gnark/sponge/: sponge.go
gnark/sumcheck/: sumcheck.go  sumcheck_test.go  utils.go
gnark/transcript/: sponge.go  verifier.go
rust/: Cargo.toml  build.rs
rust/benchmark/: Cargo.toml
rust/benchmark/src/: main.rs
rust/ffi/: Cargo.toml  build.rs
rust/ffi/src/: lib.rs
rust/gkr/: Cargo.toml
rust/gkr/src/: lib.rs  prover.rs  reference.rs  verifier.rs
rust/gkr/src/sumcheck/: chi.rs  iota.rs  rho.rs  theta.rs  theta_a.rs  theta_c.rs  theta_d.rs  util.rs
rust/gkr/src/transcript/: mod.rs  sponge.rs
rust/src/: ffi.rs  main.rs  reference.rs  verifier.rs
rust/src/sumcheck/: iota.rs  mod.rs  theta.rs
rust/src/transcript/: sponge.rs
src/: keccak.rs  main.rs
sumcheck/: Cargo.toml
sumcheck/src/: lib.rs
sumcheck/src/gkr/: circuit.rs  compiled.rs  gate.rs  graph.rs  mod.rs  predicate.rs  util.rs
sumcheck/src/gkr_round_sumcheck/: data_structures.rs  function.rs  mod.rs  scratch.rs
sumcheck/src/ml_sumcheck/: data_structures.rs  mod.rs
sumcheck/src/ml_sumcheck/protocol/: prover.rs  verifier.rs
