[package]
name = "bench-keccak"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = { version = "0.5.0", features = ["std"] }
ark-ec = { version = "0.5.0", features = ["std"] }
ark-ff = { version = "0.5.0", features = ["asm"] }
hex = "0.4.3"
keccak = "0.1.5"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-forest = "0.1.6"
