[package]
name = "gkr"
version = "0.1.0"
edition = "2024"

[features]
parallel = ["ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-sumcheck/parallel"]

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
ark-std = { version = "0.5.0", default-features = false }
ark-sumcheck = { path = "../sumcheck" }
tracing-forest = "0.1.6"
