[package]
name = "keccacheck"
version = "0.1.0"
edition = "2024"

[lib]
name = "keccak"
path = "src/ffi.rs"
crate-type = ["staticlib"]

[[bin]]
name = "keccak_test"
path = "src/main.rs"

[dependencies]
ark-bn254 = { version = "0.5.0", features = ["std"] }
ark-ec = { version = "0.5.0", features = ["std"] }
ark-ff = { version = "0.5.0", features = ["asm"] }
hex = "0.4.3"
keccak = "0.1.5"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-forest = "0.1.6"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = true
