[package]
name = "ark-sumcheck"
version = "0.5.0"
authors = [
    "Tom Shen <tomshen@berkeley.edu>",
    "arkworks contributors"
]
description = "A library for efficient sumcheck protocols"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/sumcheck/"
keywords = ["cryptography", "finite-fields", "polynomials", "sumcheck", "gkr"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-ff = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
ark-std = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
hashbrown = { version = "0.15.0" }
blake2 = { version = "0.10", default-features = false }
rayon = { version = "1", optional = true }

[dev-dependencies]
ark-test-curves = { version = "0.5.0", default-features = false, features = ["bls12_381_scalar_field", "bls12_381_curve"] }

[features]
default = ["std"]
std = ["ark-ff/std", "ark-serialize/std", "blake2/std", "ark-std/std", "ark-poly/std"]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon"]
